# reconcilation-engine

./: README.md  RECONCILIATION_INSTALL.md  RECONCILIATION_LOGIC.md  celery_app.py  db.sqlite3  manage.py  pyproject.toml  settings.py  setup.py  urls.py
core/: __init__.py  abs_calculation_rule.py  apps.py  gql_queries.py  jwt.py  jwt_authentication.py  middleware.py  module_config_registry.py  schema.py  serializers.py  tasks.py  test_helpers.py  utils.py
core/custom_filters/: custom_filter_registry_point.py
core/datetimes/: shared.py  test_ad_datetime.py  test_ne_datetime.py  test_shared.py
core/migrations/: 0032_remove_interactiveuser_legacy_id_and_more.py  0033_to_history.py  0034_remove_user_legacy_id_remove_user_validity_from_and_more.py  0035_migrate_admin_users_to_superuser.py
core/models/: __init__.py  base.py  history_model.py  openimis_graphql_test_case.py  openimis_model.py  user.py  versioned_model.py
core/reports/: user_activity.py
core/services/: base.py  userServices.py
core/tests/: test_abs_calculation_rule.py  test_api.py  test_create_test_role.py  test_create_test_role_mock.py  test_custom_filters.py  test_graphql.py  test_models.py  test_module_config_registry.py  test_security.py  test_services.py  test_utils.py  tests.py
core/validation/: base.py
mock_gateway/: main.py
reconciliation/: README.md  __init__.py  admin.py  apps.py  models.py  requirements.txt
reconciliation-ui/: index.html  package-lock.json  package.json
reconciliation-ui/src/: App.jsx  index.css  router.jsx
reconciliation/adapters/: base.py  factory.py  (+3 more)
(+73 files in other folders)
