[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "openimis-be-reconciliation"
version = "0.1.0"
description = "SSF Payment Reconciliation module for openIMIS — NCHL gateway + SOSYS tally"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "SSF Nepal" }]
requires-python = ">=3.11"
keywords = ["openimis", "reconciliation", "ssf", "nepal", "nchl", "django"]

dependencies = [
    "django>=4.2",
    "djangorestframework>=3.14",
    "django-cors-headers>=4.0",
    "requests>=2.31",
    "pdfplumber>=0.10",
    "psycopg2-binary>=2.9",   # PostgreSQL driver (required for production openIMIS)
]

[project.optional-dependencies]
dev = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["reconciliation*"]
exclude = ["reconciliation-ui*", "mock_gateway*"]

[tool.setuptools.package-data]
reconciliation = ["migrations/*.py", "templates/**/*"]
